Security and config tests, more coverage for lists